# photo-editor

./: settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  photoeditor.cpp
app/src/main/java/com/example/photoeditor/: ColorFragment.kt  CropFragment.kt  CropViewModel.kt  FeatureActivity.kt  FeatureFragment.kt  FilterFragment.kt  HistoryAdapter.kt  HistoryFragment.kt  LightFragment.kt  LightViewModel.kt  MainActivity.kt  MainFragment.kt  MainViewModel.kt  NativeFilter.kt  SharedViewModel.kt
app/src/main/java/com/example/photoeditor/data/dao/: HistoryDao.kt
app/src/main/java/com/example/photoeditor/data/database/: AppDatabase.kt
app/src/main/java/com/example/photoeditor/data/model/: ImageHistory.kt
app/src/main/java/com/example/photoeditor/ui/theme/: Color.kt  Theme.kt
app/src/main/java/com/example/photoeditor/viewmodel/: HistoryViewModel.kt
app/src/main/res/layout/: activity_main.xml  fragment_color.xml  fragment_crop.xml  fragment_filter.xml  fragment_history.xml  fragment_light.xml  fragment_main.xml  item_history.xml
app/src/main/res/menu/: main_menu.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: strings.xml  styles.xml  themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
src/main/: AndroidManifest.xml
src/main/java/com/example/photoeditor/ui/theme/: Type.kt
src/main/res/layout/: activity_feature.xml
